--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <a href="#" class="btn btn-lg btn-danger rounded">Get Started</a>
       </div>
     </div>
-    <main class="container-fluid text-center my-2 py-2">
-      <div class="card p-2 m-3">
+    <main class="container-fluid text-center my-3 py-4">
+      <div class="card p-4 m-3">
         <div class="row">
           <div class="col-md-3 hover-zoom"
                data-mdb-toggle="animation"
@@ -107,10 +107,11 @@
             </a>
           </div>
         </div>
+        <br><br>
         <!-- articles -->
         <div class="container my-4 py-4">
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 p-2">
               <h2 data-mdb-toggle="animation"
                   data-mdb-animation-start="onScroll"
                   data-mdb-animation="fade-in-left"
@@ -130,7 +131,7 @@
               </p>
               <a href="#" class="btn btn-danger">Our Catering Menu</a>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 p-2">
               <img src="https://images.unsplash.com/photo-1641296834707-bbe46429d945?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80"
                    class="img-fluid rounded-2 shadow-lg"
                    alt="">
@@ -166,6 +167,31 @@
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="container my-5 py-5">
+          <hr>
+          <div class="row">
+            <div class="col-md-4">
+              <h2 class="display-1 fw-bold fontTitle">Coming To You</h2>
+            </div>
+            <div class="col-md-8">
+              <p data-mdb-toggle="animation"
+                        data-mdb-animation-start="onScroll"
+                        data-mdb-animation="fade-in-right"
+                        data-mdb-animation-delay="100">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci, animi atque aut consequatur eveniet excepturi facere fugiat harum impedit ipsum molestiae obcaecati officia possimus praesentium quam quidem tenetur voluptate.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, aut dolorem doloremque ea ex expedita illum ipsam laudantium libero molestiae nisi nobis non nostrum, obcaecati perferendis quibusdam quod rerum veniam!
+              </p>
+              <p data-mdb-toggle="animation"
+                 data-mdb-animation-start="onScroll"
+                 data-mdb-animation="fade-in-right"
+                 data-mdb-animation-delay="300">
+                <a href="mailto:#" class="btn btn-danger">Join Our Contact List</a>
+              </p>
+            </div>
+          </div>
+          <hr>
         </div>
 
         <div class="container my-3 py-3">
