--- a/index.html
+++ b/index.html
@@ -223,6 +223,19 @@
           </div>
         </div>
 
+<!--    footer    -->
+        <div class="container">
+          <hr>
+          <div class="row d-flex mx-auto text-center justify-content-center align-items-center">
+            <div class="col-md-10">
+              <h3>Catering India</h3>
+              <a href="#">Breakfast</a> | <a href="#">Brunch</a> | <a href="#">Lunch</a>
+              <a href="#">Dinner</a> | <a href="#">Catering</a>
+              <p>CopyRight, 2022</p>
+            </div>
+          </div>
+        </div>
+<!--    footer    -->
       </div>
     </main>
     <!-- End your project here-->
